# EECE571F

./: .gitignore  AUTONOMOUS_PROGRESS.md  Makefile  PROJECT_PHASE_PLAN.md  README.md  pyproject.toml
configs/: edm_qm9_diagnostics.toml  edm_qm9_saans_smoke.toml  edm_qm9_smoke.toml  qm9_baseline.toml  qm9_saans.toml
docs/: kaggle_full_run.md  saans_design_document.tex  saans_presentation.tex  saans_presentation_notes.md  saans_presentation_script.md
scripts/: phase2_demo.py  phase3_prepare_qm9.py  phase4_baseline_smoke.py  phase5_timestep_diagnostics.py  phase6_saans_smoke.py  phase7_toy_study.py  phase8_compare_short_runs.py  phase8_experiment_matrix.py  phase8_run_baseline_short.py  phase8_run_saans_short.py  phase9_compare_runs.py  phase9_run_alpha_ablation_training.py  phase9_run_baseline_training.py  phase9_run_four_experiments.py  phase9_run_no_weighting_training.py  phase9_run_saans_training.py  run_all_smokes.py  smoke_demo.py
src/saans_project/: __init__.py  config.py
src/saans_project/baseline/: __init__.py  edm_qm9.py  interfaces.py  mock_adapter.py
src/saans_project/diagnostics/: __init__.py  timestep.py
src/saans_project/experiments/: __init__.py  short_run.py
src/saans_project/scheduler/: __init__.py  bins.py  hardness.py  sampler.py  tracker.py
src/saans_project/training/: __init__.py  entrypoints.py  saans_edm.py
tests/: test_phase2_baseline_interface.py  test_phase3_5_runtime.py  test_phase4_training_smoke.py  test_phase6_saans_edm.py  test_phase8_short_runs.py  test_scheduler_basics.py
